welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:6: error: ')' expected but 'else' found.
	else false
        ^